<resources>
    <string name="app_name">Anti Covid-19</string>

    <string name="button_call_now">call now</string>

    <string name="error_parse_json">Type not supported</string>
    <string name="error_get_data_api">First param should not be null, or you forgot passing one</string>
    <string name="error_cash_class">Class not support</string>

    <string name="msg_notification_on">You have turned on notifications</string>
    <string name="msg_notification_off">You have turned off notification</string>
    <string name="msg_search_fail">No result!</string>
    <string name="msg_connection_fail">Please check your internet connection!</string>

    <string name="radio_button_vietnamese">Vietnamese</string>
    <string name="radio_button_worlds">Worlds</string>
    <string name="radio_button_en">EN</string>
    <string name="radio_button_vn">VN</string>

    <string name="text_all_you_need">All you need</string>
    <string name="text_is_stay_at_home">is stay at home</string>
    <string name="text_case_update">Case Update</string>
    <string name="text_see_detail">See Detail</string>
    <string name="text_infected">Infected</string>
    <string name="text_death">Death</string>
    <string name="text_recovered">Recovered</string>
    <string name="text_loading">Loading…</string>
    <string name="text_information">%,d</string>
    <string name="text_plus_information">+%,d</string>
    <string name="text_sort">Sort</string>
    <string name="text_hint_search_country">Search country…</string>
    <string name="text_country_code">(%s)</string>
    <string name="text_symptoms">Symptoms</string>
    <string name="text_prevention_tips">Prevention tips</string>
    <string name="text_are_you_fill_sick">Are you fill sick?</string>
    <string name="text_head_notification">Have new %d infected</string>
    <string name="text_body_notification">, %d death</string>
    <string name="text_end_notification">, %d recovered in Viet Nam</string>

    <string name="title_statistics">Statistics</string>
    <string name="title_home">Home</string>
    <string name="title_news">News</string>
    <string name="title_detail_counties_screen">Detail Countries</string>
    <string name="title_news_screen">News</string>
    <string name="title_notification">Update</string>
</resources>
