<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <ImageView
        android:id="@+id/imageViewVirus"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/img_virus" />

    <ImageView
        android:id="@+id/imageViewDoctor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_10"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/textViewSymptoms"
        app:layout_constraintEnd_toStartOf="@+id/textViewQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHome"
        app:srcCompat="@drawable/img_coronadr" />

    <View
        android:id="@+id/viewBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/view_bottom_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSymptoms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/textViewPrevention"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSymptoms" />

    <TextView
        android:id="@+id/textViewSymptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="center"
        android:text="@string/text_symptoms"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewSymptoms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewBottom" />

    <TextView
        android:id="@+id/textViewPrevention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="center"
        android:text="@string/text_prevention_tips"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewPrevention"
        app:layout_constraintStart_toStartOf="@+id/textViewSymptoms"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewSymptoms" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPrevention"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp_5"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/viewBottom"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/viewBottom"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrevention" />

    <TextView
        android:id="@+id/textViewHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/title_home"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_are_you_fill_sick"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonHotline"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@drawable/btn_hotline_background"
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_5"
        android:text="@string/button_call_now"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/textViewQuestion"
        app:layout_constraintStart_toStartOf="@+id/textViewQuestion"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestion" />

    <RadioGroup
        android:id="@+id/radioGroupChangeLanguage"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/radio_group_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonVietnamese"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_1"
            android:layout_marginBottom="@dimen/dp_1"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selected"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/radio_button_vn"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radioButtonEnglish"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_1"
            android:layout_marginEnd="@dimen/dp_1"
            android:layout_marginBottom="@dimen/dp_1"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selected"
            android:button="@null"
            android:gravity="center"
            android:text="@string/radio_button_en"
            android:textColor="@android:color/white" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
